api issue fixed

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "AppName",
-  "name": "Groq AI",
-  "short_name": "Groq AI by Anish",
+  "name": "Gemini AI",
+  "short_name": "Gemini AI by Anish",
   "scope": "/",
   "start_url": "/",
   "icons": [
